--- a/angular.json
+++ b/angular.json
@@ -12,7 +12,9 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
+
           "options": {
+
             "outputPath": "dist/angular-jmv",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -23,9 +25,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+               "src/styles.css"
+              ],
+            "scripts": [              
+               "node_modules/jquery/dist/jquery.min.js",
+               "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
           "configurations": {
             "production": {
@@ -97,5 +103,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
